<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="division"
            android:id="@+id/divisionDet"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo"
            android:textColor="@color/indigo"
            android:id="@+id/solo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="games"
            android:id="@+id/games"
            android:textSize="15dp"
            android:layout_below="@+id/divisionDet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:id="@+id/prev"
            android:layout_below="@+id/divisionDet"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/border"
        android:layout_weight="0.35">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/indigo"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KDA"
            android:id="@+id/KDA"
            android:textSize="20dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="stats"
            android:id="@+id/tvKDA"
            android:textSize="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border"></RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border"></RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border"></RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border"></RelativeLayout>
</LinearLayout>
</ScrollView>