<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123sp"
        android:paddingLeft="10sp"
        android:paddingTop="20sp"
        android:paddingRight="10sp"
        android:paddingBottom="20sp"
        android:background="@color/indigo"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:singleLine="true"
            android:textColor="@color/white"
            android:background="@color/indigoLight"
            android:padding="5sp"
            android:gravity="center"
            android:layout_marginTop="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="NA"
                android:id="@+id/NA"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="15sp"
                android:onClick="onRadioClicked"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="EU WEST"
                android:id="@+id/EUW"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="15sp"
                android:onClick="onRadioClicked"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="EU NE"
                android:id="@+id/EUNE"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:onClick="onRadioClicked"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="Go!"
            android:onClick="login"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39sp"
        android:textColor="@color/black"
        android:textSize="25sp"/>
</RelativeLayout>
